[gd_scene load_steps=10 format=3 uid="uid://blrard2w0yr2e"]

[ext_resource type="Script" path="res://scenes/riddle_scene/riddle_scene.gd" id="1_abasa"]
[ext_resource type="Texture2D" uid="uid://vmiw8wpsmmky" path="res://assets/cobblestone.png" id="1_vudcr"]
[ext_resource type="FontFile" uid="uid://d1gobefxlnffi" path="res://assets/VT323-Regular.ttf" id="2_57tmk"]
[ext_resource type="PackedScene" uid="uid://cn0dyq4rl3p6d" path="res://scenes/results_panel.tscn" id="4_i3n8a"]

[sub_resource type="Theme" id="Theme_0u4ni"]
default_font = ExtResource("2_57tmk")
default_font_size = 64

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_i8ikv"]

[sub_resource type="Theme" id="Theme_cvq8h"]
default_font = ExtResource("2_57tmk")
default_font_size = 48

[sub_resource type="Theme" id="Theme_d55rn"]
default_font = ExtResource("2_57tmk")
default_font_size = 32

[sub_resource type="Theme" id="Theme_vpogw"]
default_font = ExtResource("2_57tmk")

[node name="RiddleScene" type="Node"]
script = ExtResource("1_abasa")

[node name="Background" type="TextureRect" parent="."]
modulate = Color(0.545098, 0.545098, 0.545098, 1)
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1155.0
offset_bottom = 1155.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(6, 6)
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("1_vudcr")
stretch_mode = 1

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_right = 0.9
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 32
alignment = 1

[node name="RiddleLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_0u4ni")
theme_override_styles/normal = SubResource("StyleBoxEmpty_i8ikv")
text = "What is the color of night?"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 128
alignment = 1

[node name="LineEdit" type="LineEdit" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_cvq8h")

[node name="Button" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_cvq8h")
theme_override_styles/normal = SubResource("StyleBoxEmpty_i8ikv")
text = "Submit"

[node name="Control" type="Control" parent="Panel"]
layout_mode = 1
anchor_left = 0.025
anchor_top = 0.025
anchor_right = 0.125
anchor_bottom = 0.125
offset_right = -0.496002
offset_bottom = -0.0320015

[node name="ButtonBack" type="Button" parent="Panel/Control"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.33333
offset_top = -1.5
offset_right = -1.50834
offset_bottom = -2.0
theme = SubResource("Theme_d55rn")
text = "Back"

[node name="ResultsPanel" parent="." instance=ExtResource("4_i3n8a")]
visible = false
theme = SubResource("Theme_vpogw")

[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/Button" to="." method="_on_submit"]
[connection signal="pressed" from="Panel/Control/ButtonBack" to="." method="_on_back_pressed"]
[connection signal="on_submit" from="ResultsPanel" to="." method="goto_home"]
